# automint

./: Cargo.toml  README.md  test_sbf.sh
src/: lib.rs  processor.rs
src/instructions/: create.rs  mint.rs
tests/: test_create_mint.rs
