[package]
name = "mintingnft"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.3"
borsh-derive = "1.5.3"
mpl-token-metadata = "5.1.0"
solana-program = "2.1.4"
spl-associated-token-account = { version = "6.0.0", features = [ "no-entrypoint" ] }
spl-token = { version = "7.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-client = "2.1.4"
solana-program-test = "2.1.4"
solana-sdk = "2.1.4"
tokio = "1.41.0"

[lib]
crate-type = ["cdylib", "lib"]
